# Yinculator

./: .gitignore  CMakeLists.txt  Calculator.sln  README.md  build.bat
Calculator/: App.cpp  App.h  Calculator.vcxproj  Calculator.vcxproj.filters  Globals.h  main.cpp
